--- a/_layouts/crossover.html
+++ b/_layouts/crossover.html
@@ -12,7 +12,7 @@
     <link href="https://tmpworldwide-dev.herokuapp.com/micropub/main" rel="micropub">
     <link href="https://webmention.herokuapp.com/api/webmention" rel="webmention">
     <script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
-    <title>{{ page.title }} - TMP Worldwide</title>
+    <title>{{ page.title }} - Radancy</title>
 </head>
 <body id="tmp-{{page.path | replace:'.html',''| replace: '/', '-' | replace: '.md', ''}}"class="nav-pulldown {{ page.section }}">
 
@@ -24,11 +24,11 @@
 
 				<header id="primary-header">
 
-					<h1 id="primary-header-logo"><a href="https://www.tmp.com/"><img src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/img/global/tmp-logo.svg" alt="TMP Worldwide"></a></h1>
+					<h1 id="primary-header-logo"><a href="https://radancy.com/"><img src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/img/global/tmp-logo.svg" alt="Radancy"></a></h1>
 
 					<p id="btn-skip-nav"><a href="#primary-content"><b>Skip to Main Content</b></a></p>
 
-					<p id="btn-partners"><a href="https://www.tmp.com/our-offices/"><b>Current Partner Site:</b> <span>Global Locations <i>(View All)</i></span></a></p>
+					<p id="btn-partners"><a href="https://radancy.com/our-offices/"><b>Current Partner Site:</b> <span>Global Locations <i>(View All)</i></span></a></p>
 
 				</header>
 
@@ -77,7 +77,7 @@
 
 					<h2 id="contributors">Contributors</h2>
 
-					<p><a href="{{ site.repo }}graphs/contributors">The TMP Worldwide UID Team</a></p>
+					<p><a href="{{ site.repo }}graphs/contributors">The Radancy UID Team</a></p>
 
 					<p>If you wish to contribute, <a href="https://guides.github.com/activities/forking/">fork</a> this <a href="{{ site.repo }}">project</a>, make some changes, and <a href="https://guides.github.com/activities/forking/#making-a-pull-request">create a pull request</a>.</p>
 
@@ -85,7 +85,7 @@
 
 					<h2 id="qa-a11y">Quality Assurance and Accessibility</h2>
 
-		        	<p>All patterns, layouts, and functionality are tested against our <a href="https://www.tmp.com/support/">supported browsers</a>. We also look for accessibility issues via automated and manual testing tools. TMP is committed to the accessibility of its websites and products and strives to meet as much of WCAG 2.0 Level AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a rel="me" href="mailto:spell@spellacy.net">Michael Spellacy</a>.</p>
+		        	<p>All patterns, layouts, and functionality are tested against our <a href="https://radancy.com/support/">supported browsers</a>. We also look for accessibility issues via automated and manual testing tools. Radancy is committed to the accessibility of its websites and products and strives to meet as much of WCAG 2.0 Level AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a rel="me" href="mailto:spell@spellacy.net">Michael Spellacy</a>.</p>
 
 				</section>
 
@@ -93,11 +93,11 @@
 
         </main><!--/#primary-content-->
 
-    	<a class="footer-call-to-action" href="https://www.tmp.com/connect/">Contact Us</a>
+    	<a class="footer-call-to-action" href="https://radancy.com/connect/">Contact Us</a>
 
 		<footer id="primary-footer">
 
-		    <h1 id="primary-footer-logo"><a href="/"><img src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/img/global/tmp-logo-drk.svg" alt="TMP Worldwide"></a></h1>
+		    <h1 id="primary-footer-logo"><a href="/"><img src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/img/global/tmp-logo-drk.svg" alt="Radancy"></a></h1>
 
 			<h2 id="primary-footer-subtitle">Build Your Talent</h2>
 
@@ -112,16 +112,16 @@
 
 			<div id="primary-footer-copyright">
 
-				<p><small>&copy; {{ "now" | date: "%Y" }} TMP Worldwide. An equal opportunity employer.</small></p>
+				<p><small>&copy; {{ "now" | date: "%Y" }} Radancy. An equal opportunity employer.</small></p>
 
 				<ul>
 					<li><a href="http://go.tmp.com/DemoTalentBrew">Request a Demo</a></li>
-				    <li><a href="https://www.tmp.com/connect/">Contact Us <span class="wai">(TMP)</span></a></li>
-					<li><a href="https://www.tmp.com/privacy/">Privacy Statement</a></li>
-					<li><a href="https://www.tmp.com/terms/">Terms &amp; Conditions</a></li>
-					<li><a href="https://www.tmp.com/support/">Support</a></li>
-					<li><a href="https://www.tmp.com/accessibility/">Accessibility</a></li>
-					<li><a href="https://www.tmp.com/sitemap/">Sitemap</a></li>
+				    <li><a href="https://radancy.com/connect/">Contact Us <span class="wai">(TMP)</span></a></li>
+					<li><a href="https://radancy.com/privacy/">Privacy Statement</a></li>
+					<li><a href="https://radancy.com/terms/">Terms &amp; Conditions</a></li>
+					<li><a href="https://radancy.com/support/">Support</a></li>
+					<li><a href="https://radancy.com/accessibility/">Accessibility</a></li>
+					<li><a href="https://radancy.com/sitemap/">Sitemap</a></li>
 				</ul>
 
 			</div>
