--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,139 +4,20 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">{% if page.noindex %}
 	  <meta content="noindex, nofollow" name="robots">{% endif %}
-    <link href="https://tmpworldwide.dev/tmp-styleguide/favicon.ico" rel="icon">
-    <style>
-
-    *, *::before, *::after {
-    box-sizing: inherit;
-    }
-
-    .sr-only:not(:focus):not(:active) {
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    }
-
-    a {
-    color: #067EB5;
-    }
-
-    body {
-    font-family: "Helvetica RN","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-    font-size: 100%;
-    font-style: normal;
-    font-variant: normal;
-    line-height: 2;
-    margin: 0;
-    padding: 1em;
-    }
-
-    code {
-    background-color: #067EB5;
-    border-radius: 4px;
-    color: white;
-    display: inline-block;
-    padding: .2em 1em;
-    margin: 1px;
-    word-wrap: break-word;
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    }
-
-    header {
-    background-color: #067EB5;
-    margin: -1em -1em 0;
-    padding: .8em 1em .4em;
-    }
-
-    header a {
-    color: white;
-    display: inline-block;
-    font-size: .7rem;
-    letter-spacing: 1px;
-    line-height: normal;
-    text-align: right;
-    text-decoration: none;
-    text-transform: uppercase;
-    }
-
-    header a span {
-    display: block;
-    }
-
-    hr {
-    border: 0;
-    border-bottom: 1px dashed #067EB5;
-    margin: 3em 0 2em;
-    }
-
-    html {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-
-      html {
-      scroll-behavior: auto;
-      }
-
-    }
-
-    img {
-    display: block;
-    max-width: 100%;
-    }
-
-    main, footer {
-    margin: 0 auto;
-    max-width: 1600px;
-    font-size: 1.05rem;
-    }
-
-    main, section {
-    margin-top: 1em;
-    }
-
-    pre {
-    white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    }
-
-    pre code {
-    display: block;
-    margin: 0;
-    padding: 1em;
-    }
-
-    pre code strong {
-    color: rgb(180, 220, 246);
-    }
-
-    pre code b {
-    color: tomato;
-    }
-
-    </style>{% if page.localcss %}
+    <link href="https://tmpworldwide.dev/rad-styleguide/favicon.png" rel="icon">
+    <link rel="stylesheet" href="https://tmpworldwide.dev/rad-styleguide/init.css">{% if page.localcss %}
     <link rel="stylesheet" href="{{ page.localcss }}">{% endif %}
     <script>document.getElementsByTagName("html")[0].className = document.getElementsByTagName("html")[0].className.replace("no-js", "js");</script>
-    <title>{{ page.title }} - TMP Worldwide</title>
+    <title>{{ page.title }} - Radancy</title>
 </head>
 
-<body id="tmp-{{page.path | replace:'.html',''| replace: '/', '-' | replace: '.md', ''}}">
+<body id="rad-{{page.path | replace:'.html',''| replace: '/', '-' | replace: '.md', ''}}">
 
   <div id="page">
 
     <header>
 
-      <a href="https://www.tmp.com"><img src="https://tmpworldwide.dev/tmp-styleguide/crossover/theme/img/global/tmp-logo.svg" alt="TMP Worldwide"> <span>Web Standards</span></a>
+      <a href="https://www.radancy.com"><img src="https://tmpworldwide.dev/rad-styleguide/logo.svg" alt="Radancy"> <span>Web Standards</span></a>
 
     </header>
 
@@ -166,7 +47,7 @@
 
         <h2>Contribute</h2>
 
-        <p><a href="{{ site.repo }}graphs/contributors">The TMP Worldwide UID Team</a></p>
+        <p><a href="{{ site.repo }}graphs/contributors">The Radancy UID Team</a></p>
 
         <p>If you wish to contribute, <a href="https://guides.github.com/activities/forking/">fork</a> this <a href="{{ site.repo }}">project</a>, make some changes, and <a href="https://guides.github.com/activities/forking/#making-a-pull-request">create a pull request</a>.</p>
 
@@ -174,7 +55,7 @@
 
         <h2>Quality Assurance</h2>
 
-        <p>All patterns, layouts, and functionality are tested against our <a href="https://www.tmp.com/support/">supported browsers</a>. We also look for accessibility issues via automated and manual testing tools and methods. TMP is committed to the accessibility of its websites and products and strives to meet as much of WCAG 2.1 Level AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a href="mailto:michael.spellacy@tmp.com">Michael Spellacy</a>.</p>
+        <p>All patterns, layouts, and functionality are tested against our <a href="https://radancy.com/support/">supported browsers</a>. We also look for accessibility issues via automated and manual testing tools and methods. Radancy is committed to the accessibility of its websites and products and strives to meet as much of WCAG 2.1 Level AA as possible. If you discover any problems with our work, please <a href="{{ site.repo }}issues">open up an issue</a> and let us know about it or contact <a href="mailto:michael.spellacy@tmp.com">Michael Spellacy</a>.</p>
 
       </section>
 
@@ -182,7 +63,7 @@
 
     <footer>
 
-      <p><small>&copy; {{ "now" | date: "%Y" }} TMP Worldwide. An equal opportunity employer.</small></p>
+      <p><small>&copy; {{ "now" | date: "%Y" }} Radancy. An equal opportunity employer.</small></p>
 
     </footer>
 
