--- a/_layouts/rwd-school-of-rock.html
+++ b/_layouts/rwd-school-of-rock.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-	<meta charset="utf-8"/>
-	<meta name="robots" content="noindex, nofollow"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link rel="stylesheet" href="/assets/css/rwd.css"/>
+	<meta charset="utf-8">
+	<meta name="robots" content="noindex, nofollow">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="/assets/css/rwd.css">
 	<title>{{ page.title }} -  RWD School of Rock!</title>
 </head>
 
