--- a/_archive/_layouts/crossover.html
+++ b/_archive/_layouts/crossover.html
@@ -24,11 +24,11 @@
 
 				<header id="primary-header">
 
-					<h1 id="primary-header-logo"><a href="https://radancy.com/"><img src="{{ site.git-url }}/tmp-styleguide/crossover/theme/img/global/tmp-logo.svg" alt="Radancy"></a></h1>
+					<h1 id="primary-header-logo"><a href="{{ site.company-url }}/"><img src="{{ site.git-url }}/tmp-styleguide/crossover/theme/img/global/tmp-logo.svg" alt="TMP Worldwide"></a></h1>
 
 					<p id="btn-skip-nav"><a href="#primary-content"><b>Skip to Main Content</b></a></p>
 
-					<p id="btn-partners"><a href="https://radancy.com/our-offices/"><b>Current Partner Site:</b> <span>Global Locations <i>(View All)</i></span></a></p>
+					<p id="btn-partners"><a href="{{ site.company-url }}/our-offices/"><b>Current Partner Site:</b> <span>Global Locations <i>(View All)</i></span></a></p>
 
 				</header>
 
@@ -93,7 +93,7 @@
 
         </main><!--/#primary-content-->
 
-    	<a class="footer-call-to-action" href="https://radancy.com/connect/">Contact Us</a>
+    	<a class="footer-call-to-action" href="{{ site.company-url }}/connect/">Contact Us</a>
 
 		<footer id="primary-footer">
 
@@ -116,12 +116,12 @@
 
 				<ul>
 					<li><a href="http://go.tmp.com/DemoTalentBrew">Request a Demo</a></li>
-				    <li><a href="https://radancy.com/connect/">Contact Us <span class="wai">(TMP)</span></a></li>
-					<li><a href="https://radancy.com/privacy/">Privacy Statement</a></li>
-					<li><a href="https://radancy.com/terms/">Terms &amp; Conditions</a></li>
-					<li><a href="https://radancy.com/support/">Support</a></li>
-					<li><a href="https://radancy.com/accessibility/">Accessibility</a></li>
-					<li><a href="https://radancy.com/sitemap/">Sitemap</a></li>
+				    <li><a href="{{ site.company-url }}/connect/">Contact Us <span class="wai">(TMP)</span></a></li>
+					<li><a href="{{ site.company-url }}/privacy/">Privacy Statement</a></li>
+					<li><a href="{{ site.company-url }}/terms/">Terms &amp; Conditions</a></li>
+					<li><a href="{{ site.company-url }}/support/">Support</a></li>
+					<li><a href="{{ site.company-url }}/accessibility/">Accessibility</a></li>
+					<li><a href="{{ site.company-url }}/sitemap/">Sitemap</a></li>
 				</ul>
 
 			</div>
