--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 
         <h2>Contribute</h2>
 
-        <p><a href="{{ site.sorce-code }}/graphs/contributors">The {{ site.company-name }} UID Team</a></p>
+        <p><a href="{{ site.repo }}/graphs/contributors">The {{ site.company-name }} UID Team</a></p>
 
         <p>If you wish to contribute, <a href="https://guides.github.com/activities/forking/">fork</a> this <a href="{{ site.repo }}">project</a>, make some changes, and <a href="https://guides.github.com/activities/forking/#making-a-pull-request">create a pull request</a>.</p>
 
