--- a/_layouts/rwd-school-of-rock.html
+++ b/_layouts/rwd-school-of-rock.html
@@ -26,16 +26,16 @@
 
 		</article>
 
+		<a class="button button-big back-to-top" href="#top">Back to top</a>
+
 	</main>
 
-	<a class="button button-big back-to-top" href="#top">Back to top</a>
-
-	<footer>
+	<footer id="contentinfo">
 
 		<ul>
 			<li><a href="/uid/rwd-school-of-rock/">Home</a></li>
 			<li><a href="/uid/rwd-school-of-rock/creative/">Creative</a></li>
-			<li><a href="/uid/rwd-school-of-rock/">Quality Assurance</a></li>
+			<li><a href="/uid/rwd-school-of-rock/qa/">Quality Assurance</a></li>
 		</ul>
 
 		<p>A collaborative training experience brought to you by <a href="mailto:stephanie.plumeri@tmp.com">Stephanie Plumeri</a> and <a href="mailto:michael.spellacy@tmp.com">Michael "Spell" Spellacy</a> for TMP Worldwide.</p>
